# job-radar

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1beb38bb5629_add_jobs_search_vector_and_gin_index.py  1c79f1288961_add_hnsw_indexes_for_embedding_columns.py  4a1001525d0a_create_job_profile_eval_label_tables.py  5bba7d6d03b9_add_profile_seniority_rules.py  76d5a8485cfe_add_jobs_seniority.py  8def70e51bd8_add_profile_years_experience.py  f348e8f9dcc6_widen_jobs_location_to_text.py
docs/plans/: IMPLEMENTATION_PLAN.md  PHASE_1_DESIGN.md
infra/: docker-compose.yml
src/job_radar/: __init__.py  config.py
src/job_radar/adapters/: embeddings.py  generation.py
src/job_radar/adapters/sources/: arbeitnow.py  getonboard.py  greenhouse.py  himalayas.py  lever.py  normalize.py  remotive.py
src/job_radar/db/: base.py  models.py
src/job_radar/fit/: analyze.py  cli.py  pipeline.py  schema.py  score.py
src/job_radar/ingest/: arbeitnow.py  base.py  cli.py  dedup.py  discovery.py  himalayas.py  normalize.py  pipeline.py  remotive.py  runner.py  scheduler.py
src/job_radar/ingest/adapters/: arbeitnow.py  getonboard.py  greenhouse.py  himalayas.py  lever.py
src/job_radar/profile/: cli.py  extract.py  loader.py  parse.py  schema.py
src/job_radar/quality/: cli.py  metrics.py  relevance.py
src/job_radar/retrieval/: filters.py  fts.py  fusion.py  geo.py  search.py  seniority.py  vector.py
tests/: conftest.py  test_arbeitnow.py  test_dedup.py  test_discovery.py  test_embed.py  test_embeddings.py  test_extract.py  test_filters.py  test_fit_score.py  test_fts.py  test_fusion.py  test_geo.py  test_getonboard.py  test_greenhouse.py  test_himalayas.py  test_lever.py  test_models.py  test_normalize.py  test_pipeline.py  test_quality.py  test_remotive.py  test_runner.py  test_scheduler.py  test_search.py  test_seniority.py  test_smoke.py
tests/fixtures/: arbeitnow_jobs.json  getonboard_jobs.json  greenhouse_jobs.json  himalayas_jobs.json  lever_jobs.json  remotive_jobs.json
