[project]
name = "job-radar"
version = "0.1.0"
description = "An observable, evaluated agentic system that finds remote dev roles, drafts applications under human approval, and tracks them."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Afonso Martini Spezia" }]

# Phase-1 core dependencies (Discovery + reliability spine, DESIGN.md §17).
# Feature-specific libraries are added on their own branches, not pre-declared here.
dependencies = [
    # API + config
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    # Orchestration + tool surface
    "langgraph>=0.2.60",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "fastmcp>=2.0",
    # Store & search (Postgres + pgvector, hybrid search)
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    # Ingestion (scheduler + HTML parsing for adapters)
    "apscheduler>=3.11",
    "beautifulsoup4>=4.15",
    # Observability
    "langfuse>=2.57",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
    # Profile / CV parsing (PDF text extraction)
    "pdfplumber>=0.11.10",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[project.scripts]
job-radar-ingest = "job_radar.ingest.cli:main"
job-radar-scheduler = "job_radar.ingest.scheduler:main"
job-radar-assess = "job_radar.quality.cli:main"
job-radar-profile = "job_radar.profile.cli:main"
job-radar-fit = "job_radar.fit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_radar"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

# mypy is configured but not yet a hard CI gate (DESIGN.md tooling note).
[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
